Исправлиния по критериям

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,7 +17,7 @@
 <body>
 
   <div style="display: none">
-    <include src="build/img/sprite.svg"  style="display: none"></include>
+    <include src="build/img/sprite.svg" style="display: none"></include>
   </div>
 
   <header class="page-header">
@@ -50,22 +50,25 @@
       <h1 class="catalog__headline">Каталог продукции</h1>
       <ul class="catalog__list">
         <li class="catalog__item item-card" id="pro">
-          <picture>
-            <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/chicken-small-mobile@1x.webp 1x, img/chicken-small-mobile@2x.webp 2x">
+          <a href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1300px)"
+                srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
+              <source type="image/webp"
+                srcset="img/chicken-small-mobile@1x.webp 1x, img/chicken-small-mobile@2x.webp 2x">
 
-            <source media="(min-width: 1300px)"
-              srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-            <img class="item-card__image" src="img/chicken-small-mobile@1x.jpg"
-              srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
-          </picture>
+              <source media="(min-width: 1300px)"
+                srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+              <img class="item-card__image" src="img/chicken-small-mobile@1x.jpg"
+                srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+            </picture>
+          </a>
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy PRO 500&nbsp;г</h3>
+            <h3 class="item-card__headline"><a href="#">Cat Energy PRO 500&nbsp;г</a></h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -84,23 +87,25 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <picture>
-            <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/chicken-big-mobile@1x.webp 1x, img/chicken-big-mobile@2x.webp 2x">
+          <a href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1300px)"
+                srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/chicken-big-mobile@1x.webp 1x, img/chicken-big-mobile@2x.webp 2x">
 
-            <source media="(min-width: 1300px)"
-              srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-            <img class="item-card__image" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x"
-              alt="Cat Energy
+              <source media="(min-width: 1300px)"
+                srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+              <img class="item-card__image" src="img/chicken-big-mobile@1x.jpg"
+                srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy
           PRO 1000 г">
-          </picture>
+            </picture>
+          </a>
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy PRO 1000&nbsp;г</h3>
+            <h3 class="item-card__headline"><a href="#">Cat Energy PRO 1000&nbsp;г</a></h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -119,22 +124,24 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <picture>
-            <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/fish-small-mobile@1x.webp 1x, img/fish-small-mobile@2x.webp 2x">
+          <a href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1300px)"
+                srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/fish-small-mobile@1x.webp 1x, img/fish-small-mobile@2x.webp 2x">
 
-            <source media="(min-width: 1300px)"
-              srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-            <img class="item-card__image" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x"
-              alt="Cat Energy PRO 500 г">
-          </picture>
+              <source media="(min-width: 1300px)"
+                srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+              <img class="item-card__image" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x"
+                alt="Cat Energy PRO 500 г">
+            </picture>
+          </a>
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy PRO 500&nbsp;г</h3>
+            <h3 class="item-card__headline"><a href="#">Cat Energy PRO 500&nbsp;г</a></h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -153,24 +160,23 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
+          <a href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1300px)"
+                srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/fish-big-mobile@1x.webp 1x, img/fish-big-mobile@2x.webp 2x">
 
-          <picture>
-
-            <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/fish-big-mobile@1x.webp 1x, img/fish-big-mobile@2x.webp 2x">
-
-
-            <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
-            <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-            <img class="item-card__image" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x"
-              alt="Cat Energy PRO 1000 г">
-          </picture>
-
+              <source media="(min-width: 1300px)"
+                srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+              <img class="item-card__image" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x"
+                alt="Cat Energy PRO 1000 г">
+            </picture>
+          </a>
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy PRO 1000&nbsp;г</h3>
+            <h3 class="item-card__headline"><a href="#">Cat Energy PRO 1000&nbsp;г</a></h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -189,29 +195,27 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card" id="slim">
+          <a href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1300px)"
+                srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
+              <source type="image/webp"
+                srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
 
-          <picture>
+              <source media="(min-width: 1300px)"
+                srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
 
-            <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
-            <source type="image/webp"
-              srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
-
-            <source media="(min-width: 1300px)"
-              srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-
-            <img class="item-card__image" src="img/buckwheat-small-mobile@1x.jpg"
-              srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy
+              <img class="item-card__image" src="img/buckwheat-small-mobile@1x.jpg"
+                srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy
                   SLIM 500 г">
-          </picture>
-
-
+            </picture>
+          </a>
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy SLIM 500&nbsp;г</h3>
+            <h3 class="item-card__headline"><a href="#">Cat Energy SLIM 500&nbsp;г</a></h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -230,28 +234,27 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
+          <a href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1300px)"
+                srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
+              <source type="image/webp"
+                srcset="img/buckwheat-big-mobile@1x.webp 1x, img/buckwheat-big-mobile@2x.webp 2x">
 
-          <picture>
+              <source media="(min-width: 1300px)"
+                srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
 
-            <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/buckwheat-big-mobile@1x.webp 1x, img/buckwheat-big-mobile@2x.webp 2x">
-
-            <source media="(min-width: 1300px)"
-              srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-
-            <img class="item-card__image" src="img/buckwheat-big-mobile@1x.jpg"
-              srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy
+              <img class="item-card__image" src="img/buckwheat-big-mobile@1x.jpg"
+                srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy
                     SLIM 1000 г">
-          </picture>
-
-
+            </picture>
+          </a>
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy SLIM 1000&nbsp;г</h3>
+            <h3 class="item-card__headline"><a href="#">Cat Energy SLIM 1000&nbsp;г</a></h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -270,24 +273,24 @@
           <a href="#" class="button item-card__order button--green">Заказать</a>
         </li>
         <li class="catalog__item item-card">
-          <picture>
+          <a href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1300px)"
+                srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/rice-small-mobile@1x.webp 1x, img/rice-small-mobile@2x.webp 2x">
 
-            <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/rice-small-mobile@1x.webp 1x, img/rice-small-mobile@2x.webp 2x">
-
-
-            <source media="(min-width: 1300px)"
-              srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-            <img class="item-card__image" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x"
-              alt="Cat Energy SLIM 500 г">
-          </picture>
+              <source media="(min-width: 1300px)"
+                srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+              <img class="item-card__image" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x"
+                alt="Cat Energy SLIM 500 г">
+            </picture>
+          </a>
           <div class="item-card__wrapper">
-            <h3 class="item-card__headline">Cat Energy SLIM 500&nbsp;г</h3>
+            <h3 class="item-card__headline"><a href="#">Cat Energy SLIM 500&nbsp;г</a></h3>
             <table class="item-card__properties properties">
               <tr>
                 <td class="properties__field">Объем</td>
@@ -389,7 +392,8 @@
 
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <a class="page-footer__logo"><img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи"></a>
+      <a class="page-footer__logo" href="index.html"><img src="img/logo-footer.svg" width="128" height="24"
+          alt="Кэт энерджи"></a>
       <ul class="page-footer__social social">
         <li class="social__item"><a href="vk.com" class="social__link social__link--vk">
             <svg width="22" height="12">
@@ -415,22 +419,21 @@
           </a>
         </li>
       </ul>
-      <div class="page-footer__copyright copyright">
-        <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy
 
-        </a>
-
+      <a class="page-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="copyright__link">HTML Academy</span>
         <svg width="27" height="34" viewBox="10 4 40 50">
           <path fill="#2E368F"
             d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z">
           </path>
-
         </svg>
 
+      </a>
 
 
 
-      </div>
+
+
     </div>
   </footer>
 
